--- a/data/template.html
+++ b/data/template.html
@@ -2,15 +2,22 @@
 <head>
 <style>
 
+body {
+    font-size:small
+}
+
 .observation {
   background-color: white;
   border: 1px solid gray;
   margin: 1;
   vertical-align: top;
+  width: 350;
+  height: 450;
+  display: inline-block;
 }
 
 .notes {
-  width: 500;
+  width: 340;
   padding: 8;
   display: inline-block;
   vertical-align:top;
@@ -21,18 +28,24 @@ ul {
   -webkit-columns: 2;
   -moz-columns: 2;
   list-style-type: none;
-  padding-left: 10px;
+  padding-left: 0px;
 }
 
 .sketch img {
   max-width:100%;
+  max-height:100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .sketch {
   vertical-align:top;
   padding: 8;
-  width: 180;
-  display: inline-block;
+  height: 250;
+  display: block;
   object-fit: scale-down;
 }
 
